k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projecttrack-rbac
  labels:
    app.kubernetes.io/part-of: projecttrack-rbac
