k8s/04-mailhog.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: projecttrack-rbac
  labels:
    app: mailhog
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: ui
      port: 8025
      targetPort: 8025
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: projecttrack-rbac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog
          ports:
            - containerPort: 1025
            - containerPort: 8025
          readinessProbe:
            tcpSocket:
              port: 8025
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8025
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
